# askcos-combustion-estimator

./: .coveragerc  .gitignore  .pre-commit-config.yaml  ASKCOS_INSTALLATION.md  CONTRIBUTING.md  README.md  calculate_delta_gf.py  process_reactivity_oxygen.py  pyproject.toml  requirements-dev.txt  requirements.txt  sample_output_reactivity_oxygen.csv  visualize_pathways.py  vulture_whitelist.py
.github/workflows/: ci.yml
examples/: README.md  input_smiles.csv  sample_delta_gf.csv  sample_output_iterative.csv  sample_output_original.csv
scripts/: generate_smiles_batch.py  monitor_run.sh
tests/: __init__.py  test_main.py  test_process_reactivity_oxygen.py  test_validation.py  test_visualize_pathways.py
validation/: README.md  __init__.py  benchmark.py
